fix broken link

--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -61,7 +61,7 @@
             </div>
             <div class="column is-6">
               <!-- slider image start  -->
-              <a href="blog-details.html" class="blog-slider-image blog-bg-3"></a>
+              <a href="{{ $p.RelPermalink }}" class="blog-slider-image blog-bg-3"></a>
               <!-- slider image end -->
             </div>
           </div>
@@ -120,7 +120,7 @@
           <div class="column is-one-third-fullhd is-half-tablet is-one-third-desktop">
             <div class="single-blog-item">
               <div class="blog-image-wrapper">
-                <a href="blog-details.html" class="blog-image blog-1"></a>
+                <a href="{{ $p.RelPermalink }}" class="blog-image blog-1"></a>
               </div>
               <div class="single-blog-content">
                 <div class="blog-meta">
