--- a/layouts/author/list.html
+++ b/layouts/author/list.html
@@ -88,7 +88,7 @@
           <div class="column is-one-third-fullhd is-half-tablet is-one-third-desktop">
             <div class="single-blog-item">
               <div class="blog-image-wrapper">
-                <a href="blog-details.html" class="blog-image blog-1"></a>
+                <a href="{{ $p.RelPermalink }}" class="blog-image blog-1"></a>
               </div>
               <div class="single-blog-content">
                 <div class="blog-meta">
